--- a/.gitignore
+++ b/.gitignore
@@ -1,87 +1,157 @@
-<Fragment key={`approval-${approvalStep.id || idx}`}>
-  <TableStep.Title status={approvalStep.status as workflowStatus}>
-    {/* Numeração tipo 3.1, 3.2... */}
-    <span className="font-normal">
-      {`${groupIdx + 1}.${idx + 1} `}
-    </span>
-    <span className="font-semibold">
-      {approvalStep.name}
-    </span>
-  </TableStep.Title>
+"use client";
+import * as React from "react";
+import * as SelectPrimitive from "@radix-ui/react-select";
+import { Check, ChevronDown, ChevronUp } from "lucide-react";
+import { cn } from "@/lib/utils";
 
-  <TableStep.Columns>
-    <TableStep.Line>Participant</TableStep.Line>
-    <TableStep.Line>Signature</TableStep.Line>
-    <TableStep.Line>Completed</TableStep.Line>
-    <TableStep.Line>Status</TableStep.Line>
-    <TableStep.Line>Result</TableStep.Line>
-    <TableStep.Line>Comments</TableStep.Line>
-  </TableStep.Columns>
+const Select = SelectPrimitive.Root;
 
-  {approvalStep.permissions?.people?.map(
-    (people: any, pidx: number, arr: any[]) => (
-      <Fragment key={`${approvalStep.id}-${people.userId}-${pidx}`}>
-        <TableStep.Body>
-          <TableStep.Item>
-            <div className="flex items-center text-[#636574]">
-              {people.firstName} {people.lastName}
-              {people.addedAt && people.addedBy && (
-                <div className="text-sm leading-[21px] font-normal text-[#636574]">
-                  {" "}
-                  - Added by {people.addedBy}
-                </div>
-              )}
-            </div>
-          </TableStep.Item>
-          <TableStep.Item>
-            {people.action ? people.action[0].signature : "-"}
-          </TableStep.Item>
-          <TableStep.Item>
-            {people.action ? formatDateTime(people.action[0].date) : "-"}
-          </TableStep.Item>
-          <TableStep.Item>
-            {approvalStep.status === "completed" ||
-            approvalStep.status === "pending"
-              ? approvalStep.status === "pending"
-                ? "Active"
-                : (
-                    <Status
-                      width={164}
-                      type={safeStatusType(
-                        statusFieldMap[approvalStep.status]
-                      )}
-                    >
-                      {statusLabelMap[approvalStep.status]}
-                    </Status>
-                  )
-              : "-"}
-          </TableStep.Item>
-          <TableStep.Item>
-            {people.action ? (
-              <Status
-                width={164}
-                type={safeStatusType(
-                  statusFieldMap[people.action[0].type] as workflowStatus
-                )}
-              >
-                {people.action[0].type === "success"
-                  ? approvalStep.successLabel
-                  : people.action[0].subtype}
-              </Status>
-            ) : (
-              "-"
-            )}
-          </TableStep.Item>
-          <TableStep.Item>
-            {people.action && people.action[0].comment
-              ? people.action[0].comment
-              : "-"}
-          </TableStep.Item>
-        </TableStep.Body>
-        {pidx !== arr.length - 1 && (
-          <div className="border-b border-[#EBEBEB] mx-10" />
+const SelectGroup = SelectPrimitive.Group;
+
+const SelectValue = SelectPrimitive.Value;
+
+const SelectTrigger = React.forwardRef<
+  React.ElementRef<typeof SelectPrimitive.Trigger>,
+  React.ComponentPropsWithoutRef<typeof SelectPrimitive.Trigger>
+>(({ className, children, ...props }, ref) => (
+  <SelectPrimitive.Trigger
+    ref={ref}
+    className={cn(
+      "flex h-9 border-1 border-[#8A8C98] w-full items-center justify-between whitespace-nowrap rounded-[4px] bg-transparent px-3 py-2 text-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1",
+      className
+    )}
+    {...props}
+  >
+    {children}
+    <SelectPrimitive.Icon asChild>
+      <ChevronDown className="h-4 w-4 opacity-50" />
+    </SelectPrimitive.Icon>
+  </SelectPrimitive.Trigger>
+));
+SelectTrigger.displayName = SelectPrimitive.Trigger.displayName;
+
+const SelectScrollUpButton = React.forwardRef<
+  React.ElementRef<typeof SelectPrimitive.ScrollUpButton>,
+  React.ComponentPropsWithoutRef<typeof SelectPrimitive.ScrollUpButton>
+>(({ className, ...props }, ref) => (
+  <SelectPrimitive.ScrollUpButton
+    ref={ref}
+    className={cn(
+      "flex cursor-default items-center justify-center py-1",
+      className
+    )}
+    {...props}
+  >
+    <ChevronUp className="h-4 w-4" />
+  </SelectPrimitive.ScrollUpButton>
+));
+SelectScrollUpButton.displayName = SelectPrimitive.ScrollUpButton.displayName;
+
+const SelectScrollDownButton = React.forwardRef<
+  React.ElementRef<typeof SelectPrimitive.ScrollDownButton>,
+  React.ComponentPropsWithoutRef<typeof SelectPrimitive.ScrollDownButton>
+>(({ className, ...props }, ref) => (
+  <SelectPrimitive.ScrollDownButton
+    ref={ref}
+    className={cn(
+      "flex cursor-default items-center justify-center py-1",
+      className
+    )}
+    {...props}
+  >
+    <ChevronDown className="h-4 w-4" />
+  </SelectPrimitive.ScrollDownButton>
+));
+SelectScrollDownButton.displayName =
+  SelectPrimitive.ScrollDownButton.displayName;
+
+const SelectContent = React.forwardRef<
+  React.ElementRef<typeof SelectPrimitive.Content>,
+  React.ComponentPropsWithoutRef<typeof SelectPrimitive.Content>
+>(({ className, children, position = "popper", ...props }, ref) => (
+  <SelectPrimitive.Portal>
+    <SelectPrimitive.Content
+      ref={ref}
+      className={cn(
+        "relative z-50 max-h-[--radix-select-content-available-height] min-w-[8rem] overflow-y-auto overflow-x-hidden rounded-md border bg-popover text-popover-foreground shadow-md data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 origin-[--radix-select-content-transform-origin]",
+        position === "popper" &&
+          "data-[side=bottom]:translate-y-1 data-[side=left]:-translate-x-1 data-[side=right]:translate-x-1 data-[side=top]:-translate-y-1",
+        className
+      )}
+      position={position}
+      {...props}
+    >
+      <SelectScrollUpButton />
+      <SelectPrimitive.Viewport
+        className={cn(
+          "p-1",
+          position === "popper" &&
+            "h-[var(--radix-select-trigger-height)] w-full min-w-[var(--radix-select-trigger-width)]"
         )}
-      </Fragment>
-    )
-  )}
-</Fragment>
+      >
+        {children}
+      </SelectPrimitive.Viewport>
+      <SelectScrollDownButton />
+    </SelectPrimitive.Content>
+  </SelectPrimitive.Portal>
+));
+SelectContent.displayName = SelectPrimitive.Content.displayName;
+
+const SelectLabel = React.forwardRef<
+  React.ElementRef<typeof SelectPrimitive.Label>,
+  React.ComponentPropsWithoutRef<typeof SelectPrimitive.Label>
+>(({ className, ...props }, ref) => (
+  <SelectPrimitive.Label
+    ref={ref}
+    className={cn("px-2 py-1.5 text-sm font-semibold", className)}
+    {...props}
+  />
+));
+SelectLabel.displayName = SelectPrimitive.Label.displayName;
+
+const SelectItem = React.forwardRef<
+  React.ElementRef<typeof SelectPrimitive.Item>,
+  React.ComponentPropsWithoutRef<typeof SelectPrimitive.Item>
+>(({ className, children, ...props }, ref) => (
+  <SelectPrimitive.Item
+    ref={ref}
+    className={cn(
+      "relative flex w-full cursor-default select-none items-center rounded-sm py-1.5 pl-2 pr-8 text-sm outline-none focus:bg-accent focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50",
+      className
+    )}
+    {...props}
+  >
+    <span className="absolute right-2 flex h-3.5 w-3.5 items-center justify-center">
+      <SelectPrimitive.ItemIndicator>
+        <Check className="h-4 w-4" />
+      </SelectPrimitive.ItemIndicator>
+    </span>
+    <SelectPrimitive.ItemText>{children}</SelectPrimitive.ItemText>
+  </SelectPrimitive.Item>
+));
+SelectItem.displayName = SelectPrimitive.Item.displayName;
+
+const SelectSeparator = React.forwardRef<
+  React.ElementRef<typeof SelectPrimitive.Separator>,
+  React.ComponentPropsWithoutRef<typeof SelectPrimitive.Separator>
+>(({ className, ...props }, ref) => (
+  <SelectPrimitive.Separator
+    ref={ref}
+    className={cn("-mx-1 my-1 h-px bg-muted", className)}
+    {...props}
+  />
+));
+SelectSeparator.displayName = SelectPrimitive.Separator.displayName;
+
+export {
+  Select,
+  SelectGroup,
+  SelectValue,
+  SelectTrigger,
+  SelectContent,
+  SelectLabel,
+  SelectItem,
+  SelectSeparator,
+  SelectScrollUpButton,
+  SelectScrollDownButton
+};
